showing the processing status for the antispam filter. see #658

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1888,5 +1888,9 @@
   "copy_text": {
     "message": "copy",
     "description": ""
+  },
+   "spam_check_in_progress": {
+      "message": "Spam check in progress...",
+      "description": ""
   }
 }
