en locale string fixed

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1048,7 +1048,7 @@
     "description": ""
   },
   "Summarize_prompt_prefs_title": {
-    "message": "Add Summarization Options",
+    "message": "Summarization Options",
     "description": ""
   },
   "prompt_summarize": {
